--- a/requirements.txt
+++ b/requirements.txt
@@ -25,5 +25,5 @@ traitlets==5.4.0
 tzdata==2022.2
 wcwidth==0.2.5
 gunicorn>=20.0,<21.0
-dj-database-url>1.0,<2.0
-whitenoise>6.0,<7.0
+dj-database-url>=1.0,<2.0
+whitenoise>=6.0,<7.0
